# Projects

Numbers/Python/: e.py  fibonacci.py  pi.py
Numbers/Rust/credit-card-validator/: Cargo.toml
Numbers/Rust/credit-card-validator-cheating/: Cargo.toml
Numbers/Rust/credit-card-validator-cheating/src/: main.rs
Numbers/Rust/credit-card-validator/src/: main.rs
Numbers/Rust/fibonacci/: Cargo.toml
Numbers/Rust/fibonacci/src/: main.rs
Numbers/Rust/floor-tile-cost-calculator/: Cargo.toml
Numbers/Rust/floor-tile-cost-calculator/src/: main.rs
